// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Todo
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="title"
        onChange={[MockFunction]}
        type="text"
        value="Llevar a los perritos a pasear"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="description"
    >
      Description
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="description"
        onChange={[MockFunction]}
        type="text"
        value="Recordar llevar a los 4"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Todo
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="title"
    >
      Title
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="title"
        onChange={[MockFunction]}
        type="text"
        value="Llevar a los perritos a pasear"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="description"
    >
      Description
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="description"
        onChange={[MockFunction]}
        type="text"
        value="Recordar llevar a los 4"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
